# english-speaking-app

./: .cz-config.js  .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: sentences.py  stt.py  tts.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/practice/: page.tsx
