[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
